compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_string_segment_type_does_not_allow_unit_codepoint_utf32_2.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case <<1>> { <<1:utf32_codepoint-size(5)>> -> a }"

---

error: BitString Segment Error
  ┌─ /src/one/two.gleam:1:18
  │
1 │ case <<1>> { <<1:utf32_codepoint-size(5)>> -> a }
  │                  ^^^^^^^^^^^^^^^ size cannot be specified here

Hint: utf32_codepoint segments have an autoatic size.
See: https://gleam.run/book/tour/bit-strings.html

